[package]
name = "stun-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
thiserror = "1.0"
stun = "0.4.3"
tokio = "1.21"
turn = "0.6.0"
webrtc-util = "0.6.0"